# eXpect

./: .env  .env.example  .gitignore  README.md  package.json
client/: .env.example  .eslintrc.json  .gitignore  config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/app/: layout.tsx  page.tsx  providers.tsx
client/app/components/: modal.tsx
client/app/dash/: page.tsx
client/app/dash/components/: background-image.tsx  distribution-graph.tsx  graphs.tsx  line-graph.tsx  loading-modal.tsx  pie-chart.tsx  query-post.tsx  swarm-graph.tsx  user-post.tsx
client/app/login/: page.tsx
client/app/search/: page.tsx
client/app/search/components/: profile-section.tsx  title-section.tsx
client/app/utils/socket/: socket-callback.tsx  socket.tsx
client/app/utils/stores/: profile.ts  search.ts
server/: .env.example  .gitignore  Dockerfile  follower_samples_with_tweets_anjanbharadwaj_.json  follower_samples_with_tweets_iporollo.json  follower_samples_with_tweets_raydelvecc.json  pyproject.toml  requirements.txt  user_followers.json  user_following.json  users.json
server/src/: api.py  config.py  database.py  middleware.py  prompts.py  rate_limiter.py  socket_manager.py  test_api.py  x_config.py  x_functions.py  x_models.py  x_utils.py  x_x.py
server/src/utils/: functions.py  models.py  utils.py  x.py
server/src/x/: config.py  functions.py  models.py  utils.py  x.py
